Changement de nom (Mode = fond d'écran)

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 	<!-- Menu de personnalisation du site -->
 	<div id="choix-affichage">
 		<select onchange="changeMode(this);" autocomplete="off">
-			<option value="">Mode par défaut</option>
+			<option value="">Fond d'écran par défaut</option>
 			<option value="madonna">Mode Madonna</option>
 			<option value="ouragan">Mode Ouragan</option>
 		</select>
