Ajout de l'alarme pour annulation des TAFs

--- a/index.html
+++ b/index.html
@@ -73,7 +73,15 @@
 						<input type="checkbox" onclick="setReveilMatin()" autocomplete="off" id="alarme_reveil_vac">
 						<span class="slider"></span>
 					</label>
-				</div>
+				</div>		
+
+				<div class="box-switch">
+					<label><b><font color="#FF8870">Annulation des TAFs nocturnes</font></b></label>
+					<label class="switch">
+						<input type="checkbox" onclick="setAnnulTAF()" autocomplete="off" id="alarme_annul_TAF">
+						<span class="slider"></span>
+					</label>
+				</div>	
 			</div>
 
 			<!-- Partie de programmation des alarmes personnalisées -->
